[gd_scene load_steps=8 format=2]

[ext_resource path="res://background.png" type="Texture" id=1]
[ext_resource path="res://Sprites/direcionais.png" type="Texture" id=2]
[ext_resource path="res://Fonts/FSEX300.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
rect_pivot_offset = Vector2( -115.567, 42.4122 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background Sprite" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 1.0
margin_right = 1024.0
margin_bottom = 601.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "Como jogar:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 1024.0
margin_bottom = 306.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 323.0
margin_right = 700.0
margin_bottom = 26.0
custom_constants/separation = 15
alignment = 1

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
position = Vector2( -62.4063, 7 )
scale = Vector2( 0.371687, 0.414286 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 377.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "- Andar para os lados e pular"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 346.0
margin_right = 1024.0
margin_bottom = 396.0
alignment = 1
script = ExtResource( 10 )

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 474.0
margin_right = 549.0
margin_bottom = 50.0
rect_min_size = Vector2( 75, 50 )
custom_fonts/font = SubResource( 3 )
text = "Voltar"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="MarginContainer/VBoxContainer/HBoxContainer2" method="_on_Button_pressed"]
