[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Menu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FSEX300.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/logo.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background Sprite" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 598.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 598.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 337.0
margin_right = 687.0
margin_bottom = 598.0
custom_constants/separation = 25
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MarginContainer/HBoxContainer/VBoxContainer"]
position = Vector2( 175, 136 )
scale = Vector2( 0.836983, 0.810951 )
texture = ExtResource( 4 )

[node name="Container" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 350.0
margin_bottom = 236.0
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_lock_": true
}

[node name="Botão - Começar" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 261.0
margin_right = 350.0
margin_bottom = 311.0
rect_min_size = Vector2( 350, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Começar jogo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botão - Instruções" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 350.0
margin_bottom = 386.0
rect_min_size = Vector2( 350, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Como jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botão - Personagem" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 411.0
margin_right = 350.0
margin_bottom = 461.0
rect_min_size = Vector2( 350, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Escolha seu personagem"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Botão - Começar" to="MarginContainer/HBoxContainer/VBoxContainer" method="_on_Boto__Comear_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Botão - Instruções" to="MarginContainer/HBoxContainer/VBoxContainer" method="_on_Boto__Instrues_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Botão - Personagem" to="MarginContainer/HBoxContainer/VBoxContainer" method="_on_Boto__Personagem_pressed"]
